--- a/psunote/templates/base.html
+++ b/psunote/templates/base.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{% block title %}Hello PSU Note{% endblock %}</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-dark bg-dark text-center">
-      <div class="mx-auto order-0" >
-          <a class="navbar-brand mx-auto" href="{{ url_for('index') }}">{{ self.title() }}</a>
-      </div>
-</nav>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>{% block title %}PSU Notes{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+      background-color: #c4cad1;
+    }
+    .navbar-brand {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    .nav-item .btn.disabled {
+      pointer-events: none;
+      background-color: #6c757d;
+      color: rgb(131, 136, 143);
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
-    {% block body %}
-      Default template
-    {% endblock %}
+      <a class="navbar-brand mx-auto" href="{{ url_for('index') }}">
+        {{ self.title() }}
+      </a>
     </div>
-  </body>
+  </nav>
+
+  <div class="container my-4">
+    {% block body %}
+      Default Template
+    {% endblock %}
+  </div>
+</body>
 </html>
