--- a/psunote/templates/index.html
+++ b/psunote/templates/index.html
@@ -1,27 +1,30 @@
 {% extends 'base.html' %}
+{% block title %}All Notes{% endblock %}
 {% block body %}
-<ul class="nav justify-content-center" style="padding-top: 1em;">
+<ul class="nav justify-content-center mb-4">
   <li class="nav-item">
-    <a class="btn btn-primary" href="{{ url_for('notes_create') }}">Create</a>
+    <a class="btn btn-success" href="{{ url_for('notes_create') }}">Create Note</a>
   </li>
 </ul>
+
 {% for note in notes %}
-<div class="card my-3">
+<div class="card shadow-sm my-3">
   <div class="card-body">
     <h4 class="card-title">{{ note.title }}</h4>
-    <div class="card-text my-3">
-      {{ note.description }}
-    </div>
-    <div class="card-footer text-muted">
-      Tags: 
+    <p class="card-text">{{ note.description }}</p>
+    <div class="text-muted mb-2">
+      Tags:
       {% for t in note.tags %}
-        <a href="{{ url_for('tags_view', tag_name=t.name) }}">{{ t.name }}</a>
-    {% endfor %}
+        <a href="{{ url_for('tags_view', tag_name=t.name) }}" class="badge bg-secondary text-decoration-none">{{ t.name }}</a>
+      {% endfor %}
       <br>
       Last update: {{ note.updated_date }}
     </div>
+    <a href="{{ url_for('notes_edit', id=note.id) }}" class="btn btn-warning btn-sm">Edit</a>
+    <form action="{{ url_for('notes_delete', id=note.id) }}" method="POST" class="d-inline">
+      <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+    </form>
   </div>
 </div>
 {% endfor %}
 {% endblock %}
-
