--- a/psunote/templates/tags-view.html
+++ b/psunote/templates/tags-view.html
@@ -1,25 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Tag: {{ tag_name }}{% endblock %}
 {% block body %}
-<ul class="nav justify-content-center" style="padding-top: 1em;">
+<ul class="nav justify-content-center mb-4">
   <li class="nav-item">
-    <a class="btn btn-primary" href="{{ url_for('index') }}">Home</a>
+    <a class="btn btn-outline-primary" href="{{ url_for('index') }}">Home</a>
   </li>
   <li class="nav-item">
-    <div class="btn btn-disagle">{{ tag }}</div>
+    <div class="btn disabled">{{ tag_name }}</div>
   </li>
 </ul>
+
 {% for note in notes %}
-<div class="card my-3">
+<div class="card shadow-sm my-3">
   <div class="card-body">
     <h4 class="card-title">{{ note.title }}</h4>
-    <div class="card-text my-3">
-      {{ note.description }}
-    </div>
-    <div class="card-footer text-muted">
-      Tags: 
+    <p class="card-text">{{ note.description }}</p>
+    <div class="text-muted mb-2">
+      Tags:
       {% for t in note.tags %}
-        <a href="{{ url_for('tags_view', tag_name=t.name) }}">{{ t.name }}</a>,
+        <a href="{{ url_for('tags_view', tag_name=t.name) }}" class="badge bg-secondary text-decoration-none">{{ t.name }}</a>
       {% endfor %}
       <br>
       Last update: {{ note.updated_date }}
@@ -27,5 +26,8 @@
   </div>
 </div>
 {% endfor %}
-{% endblock %}
 
+<form action="{{ url_for('tags_delete', id=tag.id) }}" method="POST" class="my-3 text-center">
+  <button type="submit" class="btn btn-danger">Delete Tag</button>
+</form>
+{% endblock %}
